Add workaround for Gradle/Maven and Kotlin with JDK16